fixed calendar alignment, realign all table views, readjusted login/signup buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+.btn-success{
+	background-color: #42413C;
+}
